2010-08-03  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Updated for 8.5.9 release.

2010-07-06  Andreas Kupries  <andreask@activestate.com>

	* doc/text.n: Fixed minor typo in the description of 'text
	  delete', as reported by <eee@users.sf.net> on the chat.

2010-05-31  Joe English  <jenglish@users.sourceforge.net>

	* generic/tkBind.c(Tk_CreateBinding): Silently ignore empty 
	binding scripts (Fixes [Bug 3006842]).
	* generic/ttk/ttkTreeview.c: [$tv tag bind $tag <...> {}]
	now removes binding.

2010-05-31  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkMain.c:  Fix CYGWIN warning: "fd_set and assiciated.macros
	have been defined in sys/types. This may cause runtime problems with W32"
	* win/winMain.c:     Add command line processing for CYGWIN, backported
	from trunk.

2010-05-20  Donal K. Fellows  <dkf@users.sf.net>

	* win/tkWinX.c (HandleIMEComposition): [Bug 2992129]: Ensure that all
	places that generate key events zero them out first; Tk relies on that
	being true for the generic parts of the fix for Bug 1924761.

2010-05-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinDialog.c: [Bug 3002230]: tk_chooseDirectory returns garbage
	on cancel.

2010-05-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinDialog.c: [Bug 2987995]: Tk_getOpenFile returns garbage
	under described circumstances. Backported some formatting from trunk.

2010-05-03  Donal K. Fellows  <dkf@users.sf.net>

	* library/button.tcl (CheckInvoke, CheckEnter): [Patch 1530276 redux]:
	Apply a bit more care to ensure that things continue to work correctly
	even when there is no -selectcolor defined.

2010-04-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinPort.h: Fix [Patch 2986105]: conditionally defining
	strcasecmp/strncasecmp
	* win/tkWinDialog.c: Fix [Bug 2987995]: Tk_GetOpenFile returns garbage
	under described circumstances, minor formatting.
	* win/tkWinDialog.c: [Patch 2898255]: Filenames limit with
	Tk_GetFileName().